--- a/app/src/main/res/layout/activity_add_pills.xml
+++ b/app/src/main/res/layout/activity_add_pills.xml
@@ -32,7 +32,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="25dp"
         android:text="Προσθήκη Χαπιών"
         android:textColor="@color/white"
         android:textSize="24sp"
@@ -40,11 +40,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/homePill"
-        android:layout_width="63dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Home Button"
+        android:scaleType="centerCrop"
+        android:padding="6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/home" />
