--- a/app/src/main/res/layout/activity_view_location.xml
+++ b/app/src/main/res/layout/activity_view_location.xml
@@ -26,11 +26,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/imagebasic" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/homeButtonViewLocation"
-        android:layout_width="63dp"
-        android:layout_height="36dp"
-        android:layout_marginTop="22dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Home Button"
+        android:padding="6dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/home" />
@@ -39,7 +44,7 @@
         android:id="@+id/ViewLocationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="25dp"
         android:text="Προβολή Τοποθεσίας"
         android:textAlignment="center"
         android:textColor="@color/white"
