apply dark mode in all Contact screens

--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/main"
     android:layout_height="match_parent">
 
     <ImageView
@@ -29,7 +30,7 @@
         app:srcCompat="@drawable/imagebasic" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/addContactBackground"
         android:layout_width="288dp"
         android:layout_height="245dp"
         android:layout_marginStart="60dp"
