--- a/app/src/main/res/layout/activity_animation.xml
+++ b/app/src/main/res/layout/activity_animation.xml
@@ -32,7 +32,7 @@
         app:layout_constraintVertical_bias="0.7" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/contactsBackground"
         android:layout_width="261dp"
         android:layout_height="365dp"
         android:background="@android:color/transparent"
