dark mode and voice rec in Contacts

--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -29,6 +29,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/imagebasic" />
 
+    <ImageButton
+        android:id="@+id/voiceRecAddContacts"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="Voice Recognition"
+        android:src="@drawable/ic_microphone"
+        android:scaleType="centerCrop"
+        android:padding="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/addContactBackground"
         android:layout_width="288dp"
