--- a/app/src/main/res/layout/activity_display_contacts.xml
+++ b/app/src/main/res/layout/activity_display_contacts.xml
@@ -53,6 +53,20 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageButton
+        android:id="@+id/voiceRecDisplayContacts"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="Voice Recognition"
+        android:src="@drawable/ic_microphone"
+        android:scaleType="centerCrop"
+        android:padding="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
         android:id="@+id/homeViewContact"
         android:layout_width="48dp"
         android:layout_height="48dp"
